<resources>
    <string name="app_name">Words-app</string>
    <string name="synonym_btn">Synonyms</string>
    <string name="antonym_btn">Antonyms</string>
    <string name="definition_btn">Definitions</string>
    <string name="rhyme_btn">Rhymes</string>
    <string name="example_btn">Examples</string>
    <string name="word_input_txt">Enter word!</string>
    <string name="back_btn">Back</string>


</resources>